--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "next": "15.0.3",
     "next-themes": "^0.4.4",
-    "react": "^19.1.0-canary-056073de-20250109",
-    "react-dom": "^19.1.0-canary-056073de-20250109"
+    "react": "19.0.0-rc-66855b96-20241106",
+    "react-dom": "19.0.0-rc-66855b96-20241106"
   },
   "devDependencies": {
     "@types/node": "^20",
