feat: chromatic 설치 및 깃헙액션 ci/cd 연동
chromatic 설치 및 연동
깃헙액션으로 chomatic ci/cd 추가

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "chromatic": "npx chromatic --project-token=chpt_d013ba21b1e5487"
   },
   "dependencies": {
     "next": "15.0.3",
@@ -30,6 +31,7 @@
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^8.8.1",
     "@typescript-eslint/parser": "^8.8.1",
+    "chromatic": "^11.22.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
     "eslint-config-prettier": "^9.1.0",
