--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "chromatic": "npx chromatic --project-token=chpt_d013ba21b1e5487"
   },
   "dependencies": {
+    "dayjs": "^1.11.13",
     "next": "15.0.3",
     "next-themes": "^0.4.4",
     "react": "19.0.0-rc-66855b96-20241106",
