--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "dayjs": "^1.11.13",
+    "dayzed": "^3.2.3",
     "next": "15.0.3",
     "next-themes": "^0.4.4",
     "react": "19.0.0-rc-66855b96-20241106",
