--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "chromatic": "npx chromatic --project-token=$CHROMATIC_PROJECT_TOKEN"
   },
   "dependencies": {
+    "@types/draft-js": "^0.11.18",
     "dayjs": "^1.11.13",
+    "draft-js": "^0.11.7",
+    "next": "15.1.6",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.6"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.3",
