--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   },
   "dependencies": {
     "@types/draft-js": "^0.11.18",
+    "@uiw/react-md-editor": "^3.6.0",
     "dayjs": "^1.11.13",
     "draft-js": "^0.11.7",
     "next": "15.1.6",
+    "next-remove-imports": "^1.0.12",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
